# IArtemis

./: README.md  twist_to_motors.cpp  twist_to_motors.py
c_artemis_gazebo/: CMakeLists.txt  package.xml
c_artemis_gazebo/config/: joint_position_control.yaml
c_artemis_gazebo/launch/: c_iartemis_state_publisher.launch  c_iartemis_state_publisher_static_tf.launch  iartemis_gazebo_test_move_2.launch~  iartemis_gazebo_test_move_3.launch~
c_artemis_gazebo/urdf/: c_iartemis_urdf_model.urdf.xacro  c_iartemis_urdf_model_fixed.urdf  c_iartemis_urdf_model_fixed.urdf.xacro  c_iartemis_urdf_model_fixed_publisher.urdf.xacro~
c_artemis_test/calib/calibration_data_nav/: calibration_nav_data_header_save.txt  left.yaml  right.yaml
c_artemis_test/calib/calibration_data_odom/: calibration_data_odom_header_save.txt  left.yaml  ost.txt  right.yaml
c_artemis_test/launch/: c_artemis_ekf_localization.launch  c_artemis_gps_driver.launch  c_artemis_mapping.launch  c_artemis_stereo_odometry.launch
c_iartemis_base_controller/: CMakeLists.txt  package.xml
c_iartemis_base_controller/launch/: base.launch  base_joy_teleop.launch
c_iartemis_base_controller/msg/: vfw_float32.msg  vfw_int32.msg
c_iartemis_base_controller/scripts/: cnes_iares_motors_carac.py  cnes_iares_peri_top_carac.py  cnes_iares_reset_odom.py
c_iartemis_base_controller/src/: dcmc_rv_motor.c  dcmc_rv_motor_controller.cpp  dcmc_rv_motor_head.h  dcmc_rv_motor_typ.h
c_iartemis_pid/: CMakeLists.txt  package.xml
c_iartemis_pid/msg/: vfw_int32.msg
c_iartemis_pid/src/: c_pid_controller.cpp  c_pid_node.cpp  xr_pid_node.cpp  xr_pid_node_v1.cpp
c_iartemis_pid/srv/: k_coeff.srv
